<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_animation_scene"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/shape2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15sp"
                android:contentDescription="@string/forpic"
                android:src="@drawable/michael" />

            <TextView
                style="@style/Michael"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="@dimen/s17" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/created_a_pod_for"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="20dp"
                android:text="@string/five_minutes_ago"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="2dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:text="@string/deep_dive_into_chatbot_training_best_practices"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/forpic"
                android:src="@drawable/facebook" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="129dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/forpic"
                android:src="@drawable/people"
                app:layout_constraintTop_tobottomOf="@id/ll2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll3"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s17"
                android:contentDescription="@string/forpic"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/thursday_january_10th_4_00_am" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:text="@string/more_details"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pivotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/thursday"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s17"
                android:contentDescription="@string/forpic"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pivotal_labs_875_howard_st_san" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:text="@string/show_map"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pivotal"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s17"
                android:contentDescription="@string/forpic"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_3_pods_48_going_5_interested" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="95dp"
                android:text="@string/more_details"
                android:textColor="@color/black" />
        </LinearLayout>


    </RelativeLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>